--- a/phpBB/docs/AUTHORS
+++ b/phpBB/docs/AUTHORS
@@ -26,8 +26,8 @@ phpBB Developers:      A_Jelly_Doughnut (Josh Woody)
                        Acyd Burn (Meik Sievertsen) [Lead 09/2005 - 01/2010]
                        APTX (Marek A. R.)
                        bantu (Andreas Fischer)
-                       DavidMJ (David M.)
                        dhn (Dominik Dröscher)
+                       evil<3 (Igor Wiedler)
                        kellanved (Henry Sudhof)
                        nickvergessen (Joas Schilling)
                        rxu (Ruslan Uzdenov)
@@ -49,6 +49,7 @@ phpBB Lead Developer:  psoTFX (Paul S. Owen) [2001 - 09/2005]
 
 phpBB Developers:      Ashe (Ludovic Arnaud)       [10/2002 - 11/2003, 06/2006 - 10/2006]
                        BartVB (Bart van Bragt)     [11/2000 - 03/2006]
+                       DavidMJ (David M.)          [12/2005 - 08/2009]
                        GrahamJE (Graham Eames)     [09/2005 - 11/2006]
                        Vic D'Elfant (Vic D'Elfant) [04/2007 - 04/2009]
 
