[ticket/9804] Account evil3 renamed to igorw, adjust AUTHORS
PHPBB3-9804

--- a/phpBB/docs/AUTHORS
+++ b/phpBB/docs/AUTHORS
@@ -27,7 +27,7 @@ phpBB Developers:      A_Jelly_Doughnut (Josh Woody)
                        APTX (Marek A. R.)
                        bantu (Andreas Fischer)
                        dhn (Dominik Dröscher)
-                       evil<3 (Igor Wiedler)
+                       igorw (Igor Wiedler)
                        kellanved (Henry Sudhof)
                        nickvergessen (Joas Schilling)
                        rxu (Ruslan Uzdenov)
