--- a/phpBB/docs/AUTHORS
+++ b/phpBB/docs/AUTHORS
@@ -1,6 +1,6 @@
 /**
 *
-* phpBB3 © Copyright 2000, 2002, 2005, 2007 phpBB Group
+* phpBB3 © Copyright phpBB Group
 * http://www.phpbb.com
 *
 * This program is free software: you can redistribute it and/or modify
