[ticket/10075] Rename nn- to Oleg in docs/AUTHORS.
PHPBB3-10075

--- a/phpBB/docs/AUTHORS
+++ b/phpBB/docs/AUTHORS
@@ -28,7 +28,7 @@ phpBB Developers:      Acyd Burn (Meik Sievertsen) [Lead 09/2005 - 01/2010]
                        igorw (Igor Wiedler)
                        kellanved (Henry Sudhof)
                        nickvergessen (Joas Schilling)
-                       nn- (Oleg Pudeyev)
+                       Oleg (Oleg Pudeyev)
                        rxu (Ruslan Uzdenov)
                        ToonArmy (Chris Smith)
 
